--- a/src/main/view/createProfile.fxml
+++ b/src/main/view/createProfile.fxml
@@ -8,34 +8,37 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.CreateProfileController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.CreateProfileController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="logout" layoutX="62.0" layoutY="49.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: #ffc900;" text="Log out">
+            <Button fx:id="logout" layoutX="67.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: #ffc900;" text="Log out">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="cancel" layoutX="652.0" layoutY="51.0" mnemonicParsing="false" onMouseClicked="#cancel" style="-fx-background-color: #ffc900;" text="Cancel">
+            <Button fx:id="cancel" layoutX="846.0" layoutY="58.0" mnemonicParsing="false" onMouseClicked="#cancel" style="-fx-background-color: #ffc900;" text="Cancel">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Label layoutX="233.0" layoutY="197.0" text="Profile name" textFill="WHITE">
+            <Label layoutX="287.0" layoutY="274.0" text="Profile name" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="20.0" />
+                  <Font name="System Bold" size="26.0" />
                </font>
             </Label>
-            <TextField fx:id="profileName" layoutX="400.0" layoutY="197.0" promptText="Name" />
-            <CheckBox fx:id="childProfile" layoutX="440.0" layoutY="255.0" mnemonicParsing="false" text="Child" textFill="WHITE">
+            <TextField fx:id="profileName" layoutX="454.0" layoutY="274.0" prefHeight="30.0" prefWidth="210.0" promptText="Name">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font size="17.0" />
+               </font></TextField>
+            <CheckBox fx:id="childProfile" layoutX="523.0" layoutY="334.0" mnemonicParsing="false" text="Child" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="19.0" />
                </font>
             </CheckBox>
-            <AnchorPane layoutX="340.0" layoutY="248.0" prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane layoutX="409.0" layoutY="372.0" prefHeight="155.0" prefWidth="305.0">
                <children>
-                  <Label fx:id="errorLabel" alignment="CENTER" layoutX="-25.0" layoutY="62.0" prefHeight="17.0" prefWidth="330.0" textFill="RED" />
+                  <Label fx:id="errorLabel" alignment="CENTER" layoutX="3.0" layoutY="62.0" prefHeight="17.0" prefWidth="302.0" textFill="RED" />
                   <Button fx:id="createProfile" layoutX="93.0" layoutY="109.0" mnemonicParsing="false" onMouseClicked="#createProfile" prefHeight="41.0" prefWidth="95.0" style="-fx-background-color: #ffc900;" text="Create">
                      <font>
                         <Font name="System Bold" size="21.0" />
