--- a/src/main/view/homePage.fxml
+++ b/src/main/view/homePage.fxml
@@ -1,13 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.HomePageController">
-   <left>
-      <AnchorPane prefHeight="200.0" prefWidth="323.0" BorderPane.alignment="CENTER" />
-   </left>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.HomePageController">
    <center>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="50.0" layoutY="140.0" prefHeight="624.0" prefWidth="589.0">
+               <content>
+                  <GridPane fx:id="videoGrid" prefHeight="621.0" prefWidth="585.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                  </GridPane>
+               </content>
+            </ScrollPane>
+            <Button fx:id="changeProfile_btn" layoutX="43.0" layoutY="38.0" mnemonicParsing="false" onMouseClicked="#changeProfile" style="-fx-background-color: #ffc900;" text="Change profile">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="change_subscription_btn" layoutX="452.0" layoutY="38.0" mnemonicParsing="false" onMouseClicked="#changeSubscription" style="-fx-background-color: #ffc900;" text="Change subscription">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+         </children></AnchorPane>
    </center>
+   <left>
+      <AnchorPane fx:id="anchorPane" prefHeight="200.0" prefWidth="323.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="movies_btn" layoutX="38.0" layoutY="357.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="248.0" style="-fx-background-color: #ffc900;" text="Movies">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Button>
+            <Button fx:id="series_btn" layoutX="38.0" layoutY="435.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="248.0" style="-fx-background-color: #ffc900;" text="Series">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Button>
+            <Button fx:id="documentaries_btn" layoutX="38.0" layoutY="510.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="248.0" style="-fx-background-color: #ffc900;" text="Documentaries">
+               <font>
+                  <Font name="System Bold" size="21.0" />
+               </font>
+            </Button>
+            <VBox fx:id="profileBox" layoutX="62.0" layoutY="84.0" prefHeight="179.0" prefWidth="201.0" />
+            <Button fx:id="logout_btn" layoutX="122.0" layoutY="642.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: #ffc900;" text="Log out">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+         </children>
+      </AnchorPane>
+   </left>
 </BorderPane>
