--- a/src/main/view/register.fxml
+++ b/src/main/view/register.fxml
@@ -10,64 +10,61 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.RegisterController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.RegisterController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ImageView fitHeight="63.0" fitWidth="74.0" layoutX="209.0" layoutY="53.0">
+            <ImageView fitHeight="63.0" fitWidth="74.0" layoutX="475.0" layoutY="124.0">
                <image>
                   <Image url="@../img/lock_icon.png" />
                </image>
             </ImageView>
-            <Label layoutX="45.0" layoutY="180.0" text="Email" textFill="WHITE">
+            <Label layoutX="318.0" layoutY="268.0" text="Email" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="21.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="45.0" layoutY="241.0" text="Birthday" textFill="WHITE">
+            <Label layoutX="318.0" layoutY="329.0" text="Birthday" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="21.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="45.0" layoutY="298.0" text="Password" textFill="WHITE">
+            <Label layoutX="318.0" layoutY="386.0" text="Password" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="21.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <Label layoutX="49.0" layoutY="359.0" text="RIB" textFill="WHITE">
+            <Label layoutX="322.0" layoutY="447.0" text="RIB" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="21.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <PasswordField fx:id="password" layoutX="247.0" layoutY="299.0" prefHeight="26.0" prefWidth="186.0" promptText="Password" />
-            <TextField fx:id="rib" layoutX="246.0" layoutY="360.0" prefHeight="26.0" prefWidth="187.0" promptText="RIB" />
-            <DatePicker fx:id="birthday" layoutX="245.0" layoutY="242.0" promptText="Birthday" style="-fx-background-color: #000000;" />
-            <TextField fx:id="email" layoutX="244.0" layoutY="181.0" prefHeight="26.0" prefWidth="187.0" promptText="Email" />
-            <Button fx:id="register_btn" layoutX="298.0" layoutY="457.0" mnemonicParsing="false" onMouseClicked="#userRegister" prefHeight="31.0" prefWidth="80.0" style="-fx-background-color: #ffc900;" text="Sign up">
+            <PasswordField fx:id="password" layoutX="520.0" layoutY="386.0" prefHeight="26.0" prefWidth="186.0" promptText="Password">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font size="16.0" />
+               </font></PasswordField>
+            <TextField fx:id="rib" layoutX="519.0" layoutY="447.0" prefHeight="26.0" prefWidth="187.0" promptText="RIB">
+               <font>
+                  <Font size="16.0" />
+               </font></TextField>
+            <DatePicker fx:id="birthday" layoutX="518.0" layoutY="328.0" prefHeight="32.0" prefWidth="189.0" style="-fx-background-color: #000000;" />
+            <TextField fx:id="email" layoutX="518.0" layoutY="268.0" prefHeight="26.0" prefWidth="187.0" promptText="Email">
+               <font>
+                  <Font size="16.0" />
+               </font></TextField>
+            <Button fx:id="register_btn" layoutX="456.0" layoutY="565.0" mnemonicParsing="false" onMouseClicked="#userRegister" prefHeight="35.0" prefWidth="112.0" style="-fx-background-color: #ffc900;" text="Sign up">
+               <font>
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
-            <Label fx:id="wrongRegister" alignment="CENTER" layoutX="235.0" layoutY="416.0" prefHeight="17.0" prefWidth="206.0" textFill="RED" />
-            <Button fx:id="loginPage" layoutX="265.0" layoutY="517.0" mnemonicParsing="false" onMouseClicked="#userLogin" prefHeight="31.0" prefWidth="154.0" style="-fx-background-color: #ffc900;" text="Go to login page">
+            <Label fx:id="wrongRegister" alignment="CENTER" layoutX="509.0" layoutY="508.0" prefHeight="17.0" prefWidth="206.0" textFill="RED" />
+            <Button fx:id="loginPage" layoutX="435.0" layoutY="659.0" mnemonicParsing="false" onMouseClicked="#userLogin" prefHeight="31.0" prefWidth="154.0" style="-fx-background-color: #ffc900;" text="Go to login page">
                <font>
-                  <Font name="System Bold" size="16.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
    </center>
-   <left>
-      <AnchorPane prefHeight="600.0" prefWidth="323.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text fill="WHITE" layoutX="48.0" layoutY="292.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="Subscribtion page">
-               <font>
-                  <Font size="30.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
-   </left>
 </BorderPane>
