--- a/src/main/view/resetPassword.fxml
+++ b/src/main/view/resetPassword.fxml
@@ -8,49 +8,43 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ResetPasswordController">
-   <left>
-      <AnchorPane prefHeight="200.0" prefWidth="323.0" BorderPane.alignment="CENTER">
-         <children>
-            <Text fill="WHITE" layoutX="52.0" layoutY="293.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Reset your password">
-               <font>
-                  <Font name="System Bold" size="25.0" />
-               </font>
-            </Text>
-         </children>
-      </AnchorPane>
-   </left>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1000.0" style="-fx-background-color: #000000;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.controller.ResetPasswordController">
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <Label layoutX="65.0" layoutY="244.0" text="New password" textFill="WHITE">
+            <Label layoutX="317.0" layoutY="284.0" text="New password" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
-            <ImageView fitHeight="60.0" fitWidth="67.0" layoutX="285.0" layoutY="120.0">
+            <ImageView fitHeight="60.0" fitWidth="67.0" layoutX="500.0" layoutY="137.0">
                <image>
                   <Image url="@../img/lock_icon.png" />
                </image>
             </ImageView>
-            <Label layoutX="65.0" layoutY="311.0" text="Confirm password" textFill="WHITE">
+            <Label layoutX="317.0" layoutY="351.0" text="Confirm password" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Label>
+            <PasswordField fx:id="passwordEntered" layoutX="565.0" layoutY="284.0" promptText="New password">
+               <font>
+                  <Font size="15.0" />
+               </font></PasswordField>
+            <PasswordField fx:id="passwordConfirmed" layoutX="565.0" layoutY="351.0" promptText="New password">
+               <font>
+                  <Font size="15.0" />
+               </font></PasswordField>
+            <Button layoutX="485.0" layoutY="488.0" mnemonicParsing="false" onMouseClicked="#resetPassword" prefHeight="35.0" prefWidth="98.0" style="-fx-background-color: #ffc900;" text="Confirm">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-            </Label>
-            <PasswordField fx:id="passwordEntered" layoutX="239.0" layoutY="243.0" promptText="New password" />
-            <PasswordField fx:id="passwordConfirmed" layoutX="239.0" layoutY="310.0" promptText="New password" />
-            <Button layoutX="279.0" layoutY="408.0" mnemonicParsing="false" onMouseClicked="#resetPassword" prefHeight="29.0" prefWidth="80.0" style="-fx-background-color: #ffc900;" text="Confirm">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
             </Button>
-            <Label fx:id="changeResult" alignment="CENTER" layoutX="198.0" layoutY="361.0" prefHeight="17.0" prefWidth="251.0" textFill="RED" />
-            <Button layoutX="245.0" layoutY="474.0" mnemonicParsing="false" onMouseClicked="#userLogin" prefHeight="29.0" prefWidth="149.0" style="-fx-background-color: #ffc900;" text="Go to login page">
+            <Label fx:id="changeResult" alignment="CENTER" layoutX="532.0" layoutY="418.0" prefHeight="17.0" prefWidth="251.0" textFill="RED" />
+            <Button layoutX="459.0" layoutY="603.0" mnemonicParsing="false" onMouseClicked="#userLogin" prefHeight="29.0" prefWidth="149.0" style="-fx-background-color: #ffc900;" text="Go to login page">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Button>
          </children>
