--- a/src/main/view/homePage.fxml
+++ b/src/main/view/homePage.fxml
@@ -14,9 +14,9 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="50.0" layoutY="140.0" prefHeight="624.0" prefWidth="589.0">
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="50.0" layoutY="140.0" prefHeight="624.0" prefWidth="609.0">
                <content>
-                  <GridPane fx:id="videoGrid" prefHeight="621.0" prefWidth="585.0">
+                  <GridPane fx:id="videoGrid" prefHeight="621.0" prefWidth="609.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -60,7 +60,12 @@
                </font>
             </Button>
             <VBox fx:id="profileBox" layoutX="77.0" layoutY="91.0" prefHeight="179.0" prefWidth="201.0" />
-            <Button fx:id="logout_btn" layoutX="137.0" layoutY="649.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: #ffc900;" text="Log out">
+            <Button fx:id="logout_btn" layoutX="136.0" layoutY="693.0" mnemonicParsing="false" onMouseClicked="#logout" style="-fx-background-color: #ffc900;" text="Log out">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="list_btn" layoutX="147.0" layoutY="618.0" mnemonicParsing="false" onMouseClicked="#showLists" style="-fx-background-color: #ffc900;" text="Lists">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
